--- a/index.html
+++ b/index.html
@@ -50,16 +50,15 @@
     <link rel="stylesheet" type="text/css" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/sparta-bucket2.css">
 </head>
 
-<body class="bg center">
-    <h1 class="title">2023 신년계획</h1>
+<body class="bg-t4 center">
+    <h1 class="title-t4">2023 신년계획</h1>
     <p class="msg">올해는 호락호락하지 않게</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1 center">취업 성공하기</div>
-        <div class="bucket img2 center">취업 성공하기</div>
-        <div class="bucket img2 center">취업 성공하기</div>
-        <div class="bucket img1 center">취업 성공하기</div>
-        <div class="bucket img1 center">취업 성공하기</div>
-        <div class="bucket img2 center">취업 성공하기</div>
+        <div class="bucket img1-t4 center">취업 성공하기</div>
+        <div class="bucket img2-t4 center">1000만원 모으기</div>
+        <div class="bucket img3-t4 center">쉽게 울지않기</div>
+        <div class="bucket img4-t4 center">말 예쁘게하기</div>
+        <div class="bucket img5-t4 center">근면성실하기</div>
     </div>
 
 </body>
