--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
         .msg {
             font-weight: bold;
+            color: white;
         }
 
         .bucket {
@@ -51,7 +52,7 @@
 </head>
 
 <body class="bg-t4 center">
-    <h1 class="title-t4">2023 신년계획</h1>
+    <h1 class="title">2023 신년계획</h1>
     <p class="msg">올해는 호락호락하지 않게</p>
     <div class="row flex-row wrap">
         <div class="bucket img1-t4 center">취업 성공하기</div>
