--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         }
 
         .msg {
-            font-weight: bold;
             color: white;
+            font-weight: bold;
         }
 
         .bucket {
@@ -51,7 +51,7 @@
     <link rel="stylesheet" type="text/css" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/sparta-bucket2.css">
 </head>
 
-<body class="bg-t4 center">
+<body class="bg center">
     <h1 class="title">2023 신년계획</h1>
     <p class="msg">올해는 호락호락하지 않게</p>
     <div class="row flex-row wrap">
